speedup tomcat startup